--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,9 +2,6 @@ name: Release Docker Image
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - master
 
 jobs:
   build:
@@ -49,4 +46,4 @@ jobs:
 
       - name: Build the Docker image
         run: |
-          docker buildx build --push --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 -t b3log/siyuan:latest -t b3log/siyuan:v2.10.12 .
+          docker buildx build --push --platform linux/amd64 -t 6kying9/siyuan:latest -t 6kying9/siyuan:v2.10.121 .
